# beamMeasurementInInjectionLine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ToDo.txt  adcInputs.c  adcInputs.h  beamMeasurement.c  compilationTime.h  debuggingTools.c  debuggingTools.h  howto.txt  mainTimer.c  mainTimer.h  masterConfig.h  modbusConfig.h  run-clang-format.sh  run-copy-binaries.sh  run-doxy.sh  run-git.sh  run-my--clang-tidy.sh  run-ram-usage.sh  spiCommunication.c  spiCommunication.h
cmake/: archive_uf2.cmake
documentation/: ModbusRegisters.csv  ModbusRegisters.ods  calculations.ods  debug_simulator.md  error_codes.md  notatka_nt_rejestrów_Modbus.txt  tasks.md
documentation/dox/: .gitignore  Doxyfile  doxy-run
freemodbus/: CMakeLists.txt  mb.c
freemodbus/functions/: mbfunccoils.c  mbfuncholding.c  mbfuncinput.c  mbutils.c
freemodbus/include/: mb.h  mbconfig.h  mbport.h
freemodbus/rtu/: mbcrc.c  mbrtu.c
include/: actuatorCtrl.h  adcInputs.h  analogInputs.h  auxiliaryFSMs.h  configFaradayCups.h  debuggingTools.h  highLevelCtrl.h  logicInputs.h  mainTimer.h  masterConfig.h  modbusConfig.h  sharedData.h
portfreemodbus/: modbusCustom.c  port.h  portevent.c  portserial.c  porttimer.c
source/: actuatorCtrl.c  adcInputs.c  analogInputs.c  auxiliaryFSMs.c  beamMeasurement.c  compilationTime.c  debuggingTools.c  highLevelCtrl.c  logicInputs.c  mainTimer.c  sharedData.c
testing/: 2026-06-09_b_integration-test-log_pneumatic.txt  2026-06-09_integration-test-log_pneumatic.txt  integration-test-scenarios.txt  mbpoll-read-3000.sh  mbpoll-write-simulator.sh  temp2.sh  terminal-S4-run.sh  terminal1-run.sh  terminal2-run.sh
tests/: test_auxiliaryFSMs.c  test_highLevelCtrl.c
